robballen75-Salesforce/4-7-15/src/objects/MS_Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advanced_Search_Tool_A__c</fullName>
        <formula>CASE( Account__r.Search_Tools__c ,
&quot;Lexis Nexis - Total Search&quot;,&quot;Lexis Nexis - Total Search&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;Practice Technologies - RealPractice&quot;,&quot;Practice Technologies - RealPractice&quot;,
&quot;Recommind - MindServer&quot;,&quot;Recommind - MindServer&quot;,
&quot;Thomson Elite - West km&quot;,&quot;Thomson Elite - West km&quot;,
&quot;Thomson Elite - West Law&quot;,&quot;Thomson Elite - West Law&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advanced Search Tool	(A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advanced_Search_Tool__c</fullName>
        <label>Advanced Search Tool</label>
        <picklist>
            <picklistValues>
                <fullName>Lexis Nexis - Total Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Technologies - RealPractice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommind - MindServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thomson Elite - West km</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thomson Elite - West Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Project_No_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If there&apos;s no SOW but the project has been approved, this box should be checked.  Projects that are less than a day or where it would be inappropriate to request a signed SOW from the client may fall into this category.</inlineHelpText>
        <label>Approved Project-No SOW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_Not_Chargeable_Post_Sales__c</fullName>
        <label>Billable Not Chargeable (Post Sales)</label>
        <summarizedField>MS_Time_Entry__c.TE_Billable_Not_Chargeable__c</summarizedField>
        <summaryFilterItems>
            <field>MS_Time_Entry__c.Pre_Post_Sales__c</field>
            <operation>equals</operation>
            <value>Post-Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>MS_Time_Entry__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CR_Account_Owner__c</fullName>
        <formula>Account__r.Client_Relations_Account_Owner__r.FirstName&amp;&quot; &quot;&amp;Account__r.Client_Relations_Account_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Order_Amount__c</fullName>
        <label>Change Order Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Change_Order_Days__c</fullName>
        <label>Change Order Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Relations_Signoff_Date__c</fullName>
        <label>Client Relations Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Services_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client Services person who is the owner, or has the primary responsibility for completion of the Project.</description>
        <inlineHelpText>Select a Client Services User who will be assigned ownership of the project.</inlineHelpText>
        <label>Client Services Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compare_Tool_A__c</fullName>
        <formula>CASE( Account__r.Compare_Tool__c ,
&quot;CompareRite&quot;,&quot;CompareRite&quot;,
&quot;Docs Corp DocCompare&quot;,&quot;Docs Corp DocCompare&quot;,
&quot;Docs Corp PDF Docs&quot;,&quot;Docs Corp PDF Docs&quot;,
&quot;Esquire iRedline&quot;,&quot;Esquire iRedline&quot;,
&quot;Litera ChangePro&quot;,&quot;Litera ChangePro&quot;,
&quot;Multiple(See Notes)&quot;,&quot;Multiple(See Notes)&quot;,
&quot;Native Word&quot;,&quot;Native Word&quot;,
&quot;Track Changes&quot;,&quot;Track Changes&quot;,
&quot;Workshare DeltaView&quot;,&quot;Workshare DeltaView&quot;,
&quot;Workshare Professional - Compare&quot;,&quot;Workshare Professional - Compare&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Tool (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Tool__c</fullName>
        <label>Compare Tool</label>
        <picklist>
            <picklistValues>
                <fullName>CompareRite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs Corp DocCompare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Docs Corp PDF Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esquire iRedline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litera ChangePro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple(See Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshare DeltaView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshare Professional - Compare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Word w/ Microsystems Comparison Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_shadowing_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant Shadowing Project</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Management_Tool_CRM_A__c</fullName>
        <formula>CASE( Account__r.CRM__c ,
&quot;Acumen&quot;,&quot;Acumen&quot;,
&quot;Contact Ease&quot;,&quot;Contact Ease&quot;,
&quot;Contact ee&quot;,&quot;Contact ee&quot;,
&quot;Elite Apex&quot;,&quot;Elite Apex&quot;,
&quot;GroupWise&quot;,&quot;GroupWise&quot;,
&quot;Interaction&quot;,&quot;Interaction&quot;,
&quot;MS Outlook&quot;,&quot;MS Outlook&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Management Tool (CRM) (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Management_Tool_CRM__c</fullName>
        <label>Contact Management Tool (CRM)</label>
        <picklist>
            <picklistValues>
                <fullName>Acumen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Ease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact ee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GroupWise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InterAction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Special_Code__c</fullName>
        <inlineHelpText>1) What was provided to the client?
2) Why was the custom/special code needed?
3) What version of the product does the custom/special coded apply to?</inlineHelpText>
        <label>Custom / Special Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Signoff_Date__c</fullName>
        <label>Customer Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Signoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Signoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMS_Front_End_Profiling_Account__c</fullName>
        <formula>Account__r.DMS_Front_End_Profiling__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMS Front-End Profiling (Account)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMS_Front_End_Profiling_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMS Front-End Profiling (Project)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Review_Signoff_Date__c</fullName>
        <label>Requirements Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Review_Signoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requirements Signoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Assembly_Tool_A__c</fullName>
        <formula>CASE( Account__r.Document_Assembly_Vendor__c ,
&quot;Client Profiles&quot;,&quot;Client Profiles&quot;,
&quot;D3&quot;,&quot;D3&quot;,
&quot;Deal Builder&quot;,&quot;Deal Builder&quot;,
&quot;Deal proof&quot;,&quot;Deal proof&quot;,
&quot;Ghost Fill&quot;,&quot;Ghost Fill&quot;,
&quot;Homegrown&quot;,&quot;Homegrown&quot;,
&quot;Hot Docs&quot;,&quot;Hot Docs&quot;,
&quot;Infoware&quot;,&quot;Infoware&quot;,
&quot;In House&quot;,&quot;In House&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Assembly Tool (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Assembly_Tool__c</fullName>
        <label>Document Assembly Tool</label>
        <picklist>
            <picklistValues>
                <fullName>Client Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal proof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghost Fill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homegrown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Docs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infoware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Management_System_A__c</fullName>
        <formula>CASE(  Account__r.DMS__c ,
&quot;ClientProfiles&quot;,&quot;ClientProfiles&quot;,
&quot;ECM Documentum&quot;,&quot;ECM Documentum&quot;,
&quot;Interwoven (iManage) DeskSite&quot;,&quot;Interwoven (iManage) DeskSite&quot;,
&quot;Interwoven (iManage) File Site&quot;,&quot;Interwoven (iManage) File Site&quot;,
&quot;Interwoven (iManage) MailSite&quot;,&quot;Interwoven (iManage) MailSite&quot;,
&quot;Interwoven (iManage) WorkSite&quot;,&quot;Interwoven (iManage) WorkSite&quot;,
&quot;NetDocuments&quot;,&quot;NetDocuments&quot;,
&quot;Open Text (Hummingbird) DM5&quot;,&quot;Open Text (Hummingbird) DM5&quot;,
&quot;Open Text (Hummingbird) DocsOpen&quot;,&quot;Open Text (Hummingbird) DocsOpen&quot;,
&quot;Open Text (Hummingbird) PowerDocs&quot;,&quot;Open Text (Hummingbird) PowerDocs&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;SharePoint&quot;,&quot;SharePoint&quot;,
&quot;StarLaw&quot;,&quot;StarLaw&quot;,
&quot;WORLDOX&quot;,&quot;WORLDOX&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Management System (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Management_System__c</fullName>
        <label>Document Management System</label>
        <picklist>
            <picklistValues>
                <fullName>ClientProfiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECM Documentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interwoven (iManage) DeskSite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interwoven (iManage) File Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interwoven (iManage) MailSite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interwoven (iManage) WorkSite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NetDocuments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Text (Hummingbird) DM5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Text (Hummingbird) DocsOpen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Text (Hummingbird) PowerDocs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StarLaw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WORLDOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint:  Colligo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint:  Custom (3rd Party)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint:  Custom (in-house)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint:  Epona DMS for Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint:  Handshake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint:  Macroview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint:  Sword Group (Excalibur)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SharePoint:  Workshare Worksharepoint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Documents_Removed_from_Network__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The consultant checks this box once all client documents have been removed from the network at the conclusion of the project.</description>
        <inlineHelpText>Please check this box once all client-provided documents have been removed from the Microsystems network.</inlineHelpText>
        <label>Documents Removed from Network?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment_Check_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to track whether we checked to be sure we support all of the key components of their environment.</description>
        <inlineHelpText>Check to confirm the key elements of their environment are supported:
*  Windows Version (including 32- and 64-bit)
*  Word Version (including 32- and 64-bit)
*  DMS Version
*  Numbering Solution 
*  Template Solution</inlineHelpText>
        <label>Environment Check Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Environment_Description__c</fullName>
        <label>Environment Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_of_PS_Days__c</fullName>
        <inlineHelpText>Enter the date the services expire from the signed agreement/SOW.  If there is no expiration date, please enter 1/1/3000 and make a note in the Price and Payment section that the services do not expire.</inlineHelpText>
        <label>Expiration of PS Days</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FROM_Version__c</fullName>
        <inlineHelpText>Please enter the version we will be upgrading from</inlineHelpText>
        <label>Upgrade FROM Version (DocXtools)</label>
        <picklist>
            <controllingField>Project_SubType__c</controllingField>
            <picklistValues>
                <fullName>1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 2a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Update 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.0 Update 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0 Update 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.0.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.7.1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>On-site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed_Product_Date__c</fullName>
        <label>Installed Product Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installed Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kickoff_Call_Date__c</fullName>
        <label>Kickoff Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_ClientID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ClientID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_Name__c</fullName>
        <label>Legacy Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Implementation_Review__c</fullName>
        <label>Legacy Implementation Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Project_Owner__c</fullName>
        <label>Legacy Project Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Ticket__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Ticket#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_AutoGenAssignments__c</fullName>
        <description>If you would like a standard set of assignments created, select the project type from this picklist.</description>
        <label>Create Default Assignments?</label>
        <picklist>
            <picklistValues>
                <fullName>OPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metadata_Tool_A__c</fullName>
        <formula>CASE( Account__r.MetaData_Tool__c ,
&quot;BEC Legal (Metadata Scrubber)&quot;,&quot;BEC Legal (Metadata Scrubber)&quot;,
&quot;Esquire iScrub&quot;,&quot;Esquire iScrub&quot;,
&quot;Homegrown&quot;,&quot;Homegrown&quot;,
&quot;KKL (ezClean)&quot;,&quot;KKL (ezClean)&quot;,
&quot;Payne Metadata Assistant&quot;,&quot;Payne Metadata Assistant&quot;,
&quot;Softwise Out of Sight&quot;,&quot;Softwise Out of Sight&quot;,
&quot;WordAssist&quot;,&quot;WordAssist&quot;,
&quot;Workshare&quot;,&quot;Workshare&quot;,
&quot;Workshare Metawall&quot;,&quot;Workshare Metawall&quot;,
&quot;Workshare Professional&quot;,&quot;Workshare Professional&quot;,
&quot;Workshare Protect&quot;,&quot;Workshare Protect&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metadata Tool (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metadata_Tool__c</fullName>
        <label>Metadata Tool</label>
        <picklist>
            <picklistValues>
                <fullName>3BClean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEC Legal (Metadata Scrubber)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esquire iScrub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homegrown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KKL (ezClean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litera Metadact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litera Metadata Sweeper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne Metadata Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Softwise Out of Sight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordAssist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshare Metawall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshare Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workshare Protect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Office_Version_A__c</fullName>
        <formula>CASE( Account__r.Next_Office_Version__c, 
&quot;Office 2003&quot;,&quot;Office 2003&quot;, 
&quot;Undecided&quot;,&quot;Undecided&quot;,
&quot;Office 2007&quot;,&quot;Office 2007&quot;, 
&quot;Word 2010&quot;,&quot;Word 2010&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Office Version (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Charge_Days__c</fullName>
        <inlineHelpText>Enter the number of days being provided to the customer at no charge.</inlineHelpText>
        <label>No-Charge Days</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Project_Products__c</fullName>
        <description>used to sum the number of related project products for a project.  useful to run exception reports for projects without related products.</description>
        <label>Number of Project Products</label>
        <summaryForeignKey>Project_Product__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Numbering_Automation_A__c</fullName>
        <formula>CASE(  Account__r.Numbering_Tool__c  ,
&quot;BEC Legal&quot;,&quot;BEC Legal&quot;,
&quot;CCC MacroPro&quot;,&quot;CCC MacroPro&quot;,
&quot;Custom&quot;,&quot;Custom&quot;,
&quot;D3&quot;,&quot;D3&quot;,
&quot;Esquire iCreate&quot;,&quot;Esquire iCreate&quot;,
&quot;Homegrown&quot;,&quot;Homegrown&quot;,
&quot;Infoware&quot;,&quot;Infoware&quot;,
&quot;Ki Systems&quot;,&quot;Ki Systems&quot;,
&quot;KKL&quot;,&quot;KKL&quot;,
&quot;Legal MacPac&quot;,&quot;Legal MacPac&quot;,
&quot;Legal TemplatesPlus&quot;,&quot;Legal TemplatesPlus&quot;,
&quot;Native Word&quot;,&quot;Native Word&quot;,
&quot;Other&quot;,&quot;Other&quot;,
&quot;Payne&quot;,&quot;Payne&quot;,
&quot;Softwise Innova&quot;,&quot;Softwise Innova&quot;,
&quot;SoftWise MacroSuite&quot;,&quot;SoftWise MacroSuite&quot;,
&quot;Tikit Restyler&quot;,&quot;Tikit Restyler&quot;,
&quot;WordAssist&quot;,&quot;WordAssist&quot;,
&quot;Word Exchange&quot;,&quot;Word Exchange&quot;,
&quot;Word Tech&quot;,&quot;Word Tech&quot;,
&quot;WordTricks&quot;,&quot;WordTricks&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numbering Automation (A)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numbering_Automation__c</fullName>
        <label>Numbering Automation</label>
        <picklist>
            <picklistValues>
                <fullName>BEC Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC MacroPro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esquire iCreate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homegrown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infoware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ki Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KKL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal MacPac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsystems Numbering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Softwise Innova</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoftWise MacroSuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tikit Restyler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordAssist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WordTricks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <inlineHelpText>Enter the dollars for which the customer is being charged.  This excludes any time allocated from the software renewal agreement.</inlineHelpText>
        <label>Paid Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_Days__c</fullName>
        <inlineHelpText>Enter the number of days for which Microsystems is charging for this work</inlineHelpText>
        <label>Paid Days</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Paid_Amount__c</fullName>
        <inlineHelpText>Enter the dollars associated with the days provided from the renewal contract. This is used for pre-paid PS days only.
.</inlineHelpText>
        <label>Pre-Paid (PS) Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_paid_Days__c</fullName>
        <inlineHelpText>Record the number of pre-paid days included in the renewal agreement. This is used for pre-paid PS days only.
.</inlineHelpText>
        <label>Pre-paid (PS) Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_and_Payment__c</fullName>
        <description>Number of days that have been authorized to come from the KP Days pool, amount to be charged to the client, amount that is being given for free, etc.</description>
        <inlineHelpText>Please make a note to describe how the pricing and payment for this project will work.  How much will be KP Days?  How much will be &quot;free&quot; KP Days?  How much will be billed to the client?</inlineHelpText>
        <label>Price &amp; Payment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Operating_System_A__c</fullName>
        <formula>CASE(  Account__r.Primary_Operating_Systems__c ,
&quot;Windows 2000&quot;,&quot;Windows 2000&quot;,
&quot;Windows 2003 Server&quot;,&quot;Windows 2003 Server&quot;,
&quot;Windows 97&quot;,&quot;Windows 97&quot;,
&quot;Windows NT&quot;,&quot;Windows NT&quot;,
&quot;Windows Vista&quot;,&quot;Windows Vista&quot;,
&quot;Windows XP&quot;,&quot;Windows XP&quot;,
&quot;Windows 7&quot;,&quot;Windows 7&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Operating System (A)</label>
        <type>Text</type>
    </fields>
</CustomObject>